[package]
name = "rererouter"
version = "0.1.1"
description = "Iron router with regex captures support."
authors = ["Stepan Kuzmin <to.stepan.kuzmin@gmail.com>"]
license = "MIT"
license-file = "LICENSE"
documentation = "https://docs.rs/rererouter"
homepage = "https://github.com/stepankuzmin/rererouter"
repository = "https://github.com/stepankuzmin/rererouter"
readme = "README.md"
keywords = ["iron", "router", "regex", "captures"]
categories = ["web-programming::http-server"]

[badges]
travis-ci = { repository = "stepankuzmin/rererouter" }

[dependencies]
iron = "0.6.0"
regex = "0.2.2"